<resources>
    <string name="app_name">ScooterSharing</string>
    <string name="update_ride">Update Ride</string>
    <string name="enter_your_location">Enter your location</string>
    <string name="location">Location</string>
    <string name="enter_scooter_id">Enter scooter ID</string>
    <string name="name">Name :</string>
    <string name="lets_ride">Lets Ride</string>
    <string name="start_ride">Start Ride</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="select">Select</string>
    <string name="add_ride">Add Ride</string>
</resources>