<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tool="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textSize="40sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="40sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/start_ride_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corners"
            android:drawableLeft="@drawable/play"
            android:text="@string/add_ride" />

        <View
            android:layout_width="match_parent"
            android:layout_height="10sp" />

        <Button
            android:id="@+id/update_ride_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corners"
            android:drawableLeft="@drawable/edit"
            android:text="@string/update_ride" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/scooter_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="300sp"
        tool:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
</LinearLayout>